updated general layout issues

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -61,6 +61,8 @@ body {
   margin: 0;
   min-height: 100vh;
   width: 100vw;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* h1 {
